# GFDMpy

./: LICENSE  README.md  pyproject.toml  requirements.txt  verify_refactor.py
docs/: API_REFERENCE.md  USER_MANUAL.md
examples/: basic_example.py
examples/legacy/: README.md  ex0.py  ex1.py  ex2.py  ex3.py  ex5.ipynb  ex6Henry.py  ex7Elder.py  ex8.py
examples/legacy/Meshes/: mesh0.json  mesh0.py  mesh1.json  mesh1.py  mesh2.json  mesh2.py  mesh3.json  mesh3.py  mesh4.json  mesh4.py
src/GFDFlow/: __init__.py
src/gfdmpy/: GFDM.py  utils.py
src/gfdmpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_gfdmi.py
